k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-chat
spec:
  selector:
    name: go-chat
  type: NodePort
  ports:
    - port: 80
      name: http
      targetPort: 80
