k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-chat-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: go-chat
              servicePort: 80
